# scalfolder

./: .gitignore  fold.py  pyproject.toml  readme-fold.md
deepseek_llm_node/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
deepseek_llm_node/.github/workflows/: ci.yml
deepseek_llm_node/src/deepseek_llm_node/comfyui_nodes/: deepseek_llm_node.py
deepseek_llm_node/src/deepseek_llm_node/core_logic/: __init__.py  deepseek_utils.py
deepseek_llm_node/tests/: test_core_logic.py  test_integration.py
